--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -16,8 +16,23 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	height: 1000px;
-	background-color: #FFFFFF;
+	background-color: #000000;
 }
+.news {
+	color: #FFFFFF;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	height: 180px;
+
+}
+.newsarticle {
+	float: left;
+	width: 25%;
+	height: 170px;
+	text-align: center;
+	margin-top: 10px;
+}
+
+
 /* Navigation */
 header {
 	width: 100%;
@@ -264,6 +279,14 @@ footer {
 	display: none;
 }
 
+.logolarge img {
+	width: 90%;
+	height: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 /* Mobile */
 @media (max-width: 320px) {
 .logo {
@@ -480,11 +503,4 @@ nav ul li {
 	margin-top: 0px;
 	padding-top: 0px;
 }
-}
-.logolarge img {
-	width: 90%;
-	height: auto;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
