--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,7 +3,7 @@
 .navbar {
 	overflow: hidden;
 	background-color: #333;
-	width: 85%;
+	width: 1100px;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin-right: auto;
 	margin-left: auto;
