--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -12,7 +12,7 @@ body {
 }
 /* Container */
 .container {
-	width: 85%;
+	width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
 	height: 1000px;
@@ -21,7 +21,9 @@ body {
 .news {
 	color: #FFFFFF;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	height: 180px;
+	height: 220px;
+	text-align: center;
+	margin-top: 0px;
 
 }
 .newsarticle {
@@ -31,6 +33,13 @@ body {
 	text-align: center;
 	margin-top: 10px;
 }
+.newsimage {
+	border: 3px groove #8B8181;
+	border-radius: 4px;
+	width: 250px;
+	height: 110px;
+}
+
 
 
 /* Navigation */
