--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,14 +7,19 @@
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin-right: auto;
 	margin-left: auto;
+	height: auto;
 }
+.upperlogo {
+	width: 350px;
+}
+
 
 .navbar a {
 	float: left;
 	font-size: 18px;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 22px 16px;
 	text-decoration: none;
 }
 
@@ -28,10 +33,9 @@
 	border: none;
 	outline: none;
 	color: white;
-	padding: 14px 16px;
+	padding: 22px 16px;
 	background-color: inherit;
-	font-family: inherit;
-	margin: 0;	
+	font-family: inherit;	
 }
 
 .navbar a:hover, .subnav:hover .subnavbtn {
@@ -41,15 +45,14 @@
 .subnav-content {
 	display: none;
 	position: absolute;
-	left: 7.5%;
-	background-color: red;
-	width: 85%;
-	z-index: 1;
+	background-color: #333;
+	width: auto;
+	z-index: 4;
 }
 
 .subnav-content a {
 	float: left;
-	color: #80A7C0;
+	color: white;
 	text-decoration: none;
 }
 
