--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,6 +8,15 @@
 	text-align: center;
 }
 
+.topbarsmall {		
+	background-color: white;
+	position: relative;
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+	display: none;
+}
+
 .upperlogo {
 	width: 350px;
 	margin-left: auto;
@@ -16,7 +25,7 @@
 
 .navbar {
 	overflow: hidden;
-	width: 1100px;
+	width: 100%;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	margin-right: auto;
 	margin-left: auto;
@@ -72,4 +81,91 @@
 
 .subnav:hover .subnav-content{
 	display: block;
+}
+
+@media (max-width: 1096px) {
+	.topbar {
+		width: 770px;
+	}
+}
+
+@media (max-width: 767px){
+	.topbar {
+		width: 100%;
+	}
+	.navbar a {		
+		font-size: 16px;		
+		padding: 18px 10px;		
+	}
+	
+	.subnav .subnavbtn {
+		font-size: 16px;
+		padding: 18px 10px;
+	}
+}
+
+@media (max-width: 480px) {
+	.navbar a {		
+		font-size: 12px;		
+		padding: 16px 6px;		
+	}
+	
+	.subnav .subnavbtn {
+		font-size: 12px;
+		padding: 16px 6px;
+	}
+}
+
+@media (max-width: 320px) {
+	
+	.topbar {
+		display: none;
+	}
+	
+	.topbarsmall {
+		display: block;
+	}
+		
+	.smalllogo {
+		width: 35px;
+		height: 35px;
+		position: relative;
+		top: 0;
+		left: 0;
+	}
+	
+	.smalllogotext {
+		width: 214px;
+		height: 30px;
+		padding-top: 0;
+		padding-left: 3px;
+		position: relative;
+	}
+	
+	.topbarsmall #smallmenulinks {
+		display: none;		
+	}
+		
+	.topbarsmall a {
+		background-color: black;
+		color: white;
+		text-decoration: none;
+		font-size: 17px;
+		display: block;
+		padding: 8px 10px;
+	}
+	
+	.topbarsmall a.smallmenuicon {
+		background: black;
+		display: block;
+		position: absolute;
+		padding: 10px 12px;
+		right: 0;
+		top: 0;
+	}
+	
+	.topbarsmall a:hover {
+		background-color: #BBBBBB;
+		color: grey;
+	}
 }
