--- a/css/slippry.css
+++ b/css/slippry.css
@@ -254,10 +254,10 @@
     display: inline-block;
     width: 1.2em;
     height: 1.2em;
-    margin: 0 1em 0 0;
+    margin: 0 0.5em 0 0.5em;
     border-radius: 50%; }
     .sy-pager li.sy-active a {
-      background-color: #e24b70; }
+      background-color: #162370;}
     .sy-pager li a {
       width: 100%;
       height: 100%;
