--- a/css/navbar.css
+++ b/css/navbar.css
@@ -32,7 +32,7 @@
 	height: auto;
 }
 
-.navbar a {
+.navbar .navbarlink {
 	float: left;
 	font-size: 18px;
 	color: white;
@@ -47,13 +47,18 @@
 }
 
 .subnav .subnavbtn {
-	font-size: 18px;
 	border: none;
 	outline: none;
-	color: white;
+	
 	padding: 22px 16px;
-	background-color: inherit;
 	font-family: inherit;	
+}
+
+.subnav .subnavbtn a {
+	font-size: 18px;
+	text-decoration: none;
+	color: white;
+	text-align: center;	
 }
 
 .navbar a:hover, .subnav:hover .subnavbtn {
