--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,23 @@
 @charset "UTF-8";
+
 .news {
 	color: #FFFFFF;
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	height: 220px;
+	height: 260px;
 	text-align: center;
+	padding-left: 8px;
+	padding-right: 8px;
 }
+
 .newsarticle {
 	float: left;
 	width: 25%;
-	height: 170px;
 	text-align: center;
 }
 .newsimage {
 	border: 3px groove #8B8181;
 	border-radius: 4px;
-	width: 260px;
-	height: 110px;
+	width: 250px;
+	height: 125px;
 }
 
 footer {
@@ -51,4 +53,3 @@ footer {
 		width: 100%;
 	}
 }
-
