--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,6 +6,8 @@
 	width: 1100px;
 	background-color: #333333;
 	text-align: center;
+	font-weight: 700;
+	letter-spacing: 1.5px;
 }
 
 .logowrap {
@@ -41,7 +43,7 @@
 	font-size: 18px;
 	color: white;
 	text-align: center;
-	padding: 22px 16px;
+	padding: 17px 16px;
 	text-decoration: none;
 }
 
@@ -54,7 +56,7 @@
 	border: none;
 	outline: none;
 	
-	padding: 22px 16px;
+	padding: 17px 16px;
 	font-family: inherit;	
 }
 
@@ -66,7 +68,7 @@
 }
 
 .navbar a:hover, .subnav:hover .subnavbtn {
-	background-color:#5A2324;
+	color: red;
 }
 
 .subnav-content {
@@ -84,8 +86,7 @@
 }
 
 .subnav-content a:hover {
-	background-color: #eee;
-	color: black;
+	color: red;
 }
 
 .subnav:hover .subnav-content{
@@ -104,24 +105,24 @@
 	}
 	.navbar a {		
 		font-size: 16px;		
-		padding: 18px 10px;		
+		padding: 15px 10px;		
 	}
 	
 	.subnav .subnavbtn {
 		font-size: 16px;
-		padding: 18px 10px;
+		padding: 15px 10px;
 	}
 }
 
 @media (max-width: 480px) {
 	.navbar a {		
 		font-size: 12px;		
-		padding: 16px 6px;		
+		padding: 14px 6px;		
 	}
 	
 	.subnav .subnavbtn {
 		font-size: 12px;
-		padding: 16px 6px;
+		padding: 14px 6px;
 	}
 }
 
