--- a/css/projecttemplate.css
+++ b/css/projecttemplate.css
@@ -3,7 +3,7 @@
 	margin-top: 0px;
 	margin-bottom: 0px;
 	padding-bottom: 5px;
-	color: white;
+	color: black;
 	padding-left: 15px;
 	padding-top: 10px;
 	font-size: 26px;
@@ -31,7 +31,7 @@
 }
 
 .content {
-	color: #FFFFFF;
+	color: black;
 	font-size: 20px;
 	text-align: justify;
 	padding-left: 20px;	
@@ -39,12 +39,13 @@
 	margin-top: 0px;
 }
 
-.sidebar{	
+.sidebar{
 	width: 30%;
 	height: 100%;
 	margin-top: 0px;
 	top: 0;
-	right: 0;	
+	right: 0;
+	background-color: rgba(172,161,161,1.00)
 } 
 
 .flag {
@@ -57,10 +58,13 @@
 	border-bottom: medium double #FFFFFF;
 }
 .sidebar p {
-	color: white;
 	font-size: 20px;
 	margin-top: 0px;
 	margin-bottom: 0px;
+	width: auto;
+}
+.sidebar .flag p {
+	color: #FFFFFF;
 }
 
 .sidebar i {
@@ -68,15 +72,57 @@
 }
 
 .news {
-	color: white;
+	color: #000000;
 	display: flex;
 	flex-wrap: wrap;
+	margin-left: auto;
+	margin-right: auto;
+	justify-content: center;
+}
+
+.news div {
+	width: 100%;
+	margin-bot: 0;
+	margin-top: 0;
+	padding-bottom: 0;
+	display: flex;	
+	justify-content: center;	
+}
+
+.news img {
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 0;
+	width: 315px;
 }
 
 .news time {
-	width: 50%;	
+	font-size: 14px;
+	font-weight: 100;
+	width: 30%;
+	padding-left: 7px;
 }
 
 .news h3 {
-	width: 50%;
+	margin-top: 0;
+	margin-bottom: 0;
+	width: 70%;
+	font-size: 14px;
+	text-align: right;
+	padding-right: 7px;
+	font-weight: 150;
+}
+
+.news h4 {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-size: 20px;
+	width: 100%;
+	padding-left: 7px;
+}
+
+.news p {
+	width: 100%;
+	padding-left: 7px;
+	font-weight: 500;
 }
