--- a/css/navbar.css
+++ b/css/navbar.css
@@ -54,8 +54,7 @@
 
 .subnav .subnavbtn {
 	border: none;
-	outline: none;
-	
+	outline: none;	
 	padding: 17px 16px;
 	font-family: inherit;	
 }
@@ -103,30 +102,36 @@
 	.topbar {
 		width: 100%;
 	}
-	.navbar a {		
-		font-size: 16px;		
+	.navbar .navbarlink {		
+		font-size: 13px;		
 		padding: 15px 10px;		
 	}
 	
 	.subnav .subnavbtn {
-		font-size: 16px;
-		padding: 15px 10px;
+		padding: 13px 10px;
+	}
+	
+	.subnav .subnavbtn a {
+		font-size: 13px;		
 	}
 }
 
-@media (max-width: 480px) {
-	.navbar a {		
-		font-size: 12px;		
-		padding: 14px 6px;		
+@media (max-width: 520px) {
+	.navbar .navbarlink {		
+		font-size: 11px;		
+		padding: 12px 6px;		
 	}
 	
 	.subnav .subnavbtn {
-		font-size: 12px;
-		padding: 14px 6px;
+		padding: 8px 6px;
+	}
+	
+	.subnav .subnavbtn a {
+		font-size: 11px;		
 	}
 }
 
-@media (max-width: 320px) {
+@media (max-width: 420px) {
 	
 	.topbar {
 		display: none;
