--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 
+.about {
+	padding-bottom: 20px;
+}
+
 .about img {
 	width: 200px;	
 	height: 200px;
@@ -8,13 +12,13 @@
 
 .aboutlayout {
 	display: flex;
-	margin-left: 18px;
-	padding-left: 2px;
-	padding-right: 2px;
+	margin-left: 17px;
+	padding-left: 3px;
+	padding-right: 3px;
 	padding-bottom: 20px;
 	padding-top: 20px;
-	margin-right: 18px;
-	border-bottom-width: 2px;
+	margin-right: 17px;
+	border-bottom-width: 3px;
 	border-bottom-style: ridge;
 	border-bottom-left-radius: 9px;
 	border-bottom-right-radius: 9px;
