--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,34 @@
 @charset "UTF-8";
 
+.container {	
+	margin-top: 15px;
+}
+
 .news {	
 	height: 260px;
+	margin-top: 6px;	
+}
+
+.news h3 {
+	margin-top: 0;
+	margin-bottom: 6px;
 	text-align: center;
-	padding-left: 8px;
-	padding-right: 8px;
+	font-size: 22px;
 }
 
-.newsarticle {
-	float: left;
-	width: 25%;
-	text-align: center;	
+.newsarticlebox {
+	display: flex;
+	justify-content: space-between;
 }
 
-.newsarticle p {
+.newsarticle {	
+	width: 252px;	
 	text-align: justify;
-	padding-left: 10px;
-	padding-right: 10px;
 }
+
 .newsimage {
-	border: 3px groove #8B8181;
-	border-radius: 4px;
+	border: 1px groove #8B8181;
+	border-radius: 3px;
 	width: 250px;
 	height: 125px;
 }
