--- a/css/progetti.css
+++ b/css/progetti.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 .progetti {
+	margin-top: 5px;
 	display: block;
 	overflow: hidden;
 	position: relative;
@@ -9,31 +10,48 @@
 .progetti article {
 	display: flex;
 }
-.progetti article img {
+
+.progetti img {	
+	width: 250px;
+	height: 125px;	
 	position: relative;
 	border: 4px double #B5B5B5;
 	border-radius: 8px;
 	margin-left: 4px;
 	margin-top: 4px;
-	vertical-align: middle;
-	width: 315px;
-	height: 200px;
+	vertical-align: middle;	
+	-webkit-filter: contrast(75%) grayscale(50%);
+    filter: contrast(75%) grayscale(50%);	
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
 }
+
+.immaginiprogetti:hover {
+	-webkit-filter: contrast(100%) grayscale(0%);
+    filter: contrast(100%) grayscale(0%);
+}
+
+.progetti h2 {
+	font-size: 18px;
+	margin-top: 6px;
+	margin-bottom: 6px;
+}
+
 .testoprogetti {
 	margin-left: 4px;
 	padding-left: 12px;
 	padding-right: 12px;
-	font-size: 20px;
+	font-size: 18px;
 	word-wrap: break-word;
 	border-radius: 8px;
-	height: 200px;
+	height: 170px;
 	margin-right: 4px;
 	margin-top: 4px;
 	text-align: justify;
 }
 
 .testoprogetti p {
-	margin-top: 6px;
+	margin-top: 0;
 }
 
 @media (max-width: 1096px) {	
