--- a/css/slippry.css
+++ b/css/slippry.css
@@ -214,17 +214,21 @@
 
 /* captions, styled fo the overlay variant */
 .sy-caption-wrap {
-  position: absolute;
-  bottom: 2em;
-  z-index: 12;
-  left: 50%; }
+  		position: absolute;
+  		bottom: 0em;
+  		z-index: 12;
+  		left: 50%;
+		width: 100%;
+	}
   .sy-caption-wrap .sy-caption {
     position: relative;
     left: -50%;
-    background-color: rgba(0, 0, 0, 0.54);
-    color: #fff;
-    padding: 0.4em 1em;
-    border-radius: 1.2em; }
+    background-color:rgba(51, 51, 51, 0.60);
+    color: white;
+	text-align: justify;
+	  letter-spacing: 0.12em;
+	  padding-left: 0.5em;
+    }
     .sy-caption-wrap .sy-caption a:link, .sy-caption-wrap .sy-caption a:visited {
       color: #e24b70;
       font-weight: 600;
