--- a/css/template.css
+++ b/css/template.css
@@ -2,7 +2,7 @@
 /* Body */
 body {
 	font-family: 'Nunito';
-	background-color: #f2f2f2;
+	background-color: rgba(233,233,233,1.00);
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
