--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,8 +1,9 @@
 @charset "utf-8";
 
 .topbar {
-	margin-left: auto;
+	margin-left: auto;	
 	margin-right: auto;
+	margin-bottom: 15px;
 	width: 1100px;
 	background-color: #333333;
 	text-align: center;
@@ -12,6 +13,7 @@
 
 .logowrap {
 	background-color: black;
+	height: 125px;
 }
 
 .topbarsmall {		
