--- a/css/projecttemplate.css
+++ b/css/projecttemplate.css
@@ -25,7 +25,7 @@
 
 .contentbox {
 	margin-top: 0px;
-	width: 70%;
+	width: auto;
 	top:0;
 	left: 0;
 }
@@ -40,7 +40,6 @@
 }
 
 .sidebar{
-	width: 30%;
 	height: 100%;
 	margin-top: 0px;
 	top: 0;
@@ -90,18 +89,20 @@
 }
 
 .news img {
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 10px;
+	margin-right: 10px;
 	margin-bottom: 0;
 	width: 250px;
 	height: 125px;
+	-webkit-box-shadow: 0px 1px 5px 0px black;
+	box-shadow: 0px 1px 5px 0px black;
 }
 
 .news time {
 	font-size: 14px;
 	font-weight: 100;
 	width: 30%;
-	padding-left: 7px;
+	padding-left: 6px;
 }
 
 .news h3 {
