--- a/css/about.css
+++ b/css/about.css
@@ -9,42 +9,81 @@
 	margin-top: 20px;
 	margin-bottom: 0;
 	border-bottom: 1px solid rgba(0,0,0,1.00);
-	margin-left: 20px;
-	margin-right: 20px;
-	margin-bottom: 5px;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-bottom: 10px;
+	padding-bottom: 10px;
 }
-
 
 h2 {
 	margin-top: 0;
 	margin-bottom: 10px;
 	padding-left: 50px;
 }
-.about img {
-	width: 200px;	
-	height: 200px;
-}
 
-.folder {
+.fulcrumsheet {
 	display: flex;
-	margin-left: 17px;
-	padding-left: 3px;
-	padding-right: 3px;
-	padding-bottom: 12px;
+	margin-left: 5px;
+	margin-right: 5px;
+	padding-bottom: 15px;
 	padding-top: 20px;
-	margin-right: 17px;
-	border-bottom-width: 3px;
+	border-bottom-width: 4px;
 	border-bottom-style: ridge;
 	border-bottom-left-radius: 9px;
 	border-bottom-right-radius: 9px;
 }
 
-.aboutcontent {
+.fulcrumsheet img {
+	margin-left: 10px;
+}
+
+.folder {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+
+.sheet {
+	display: flex;
+	margin-left: 5px;
+	margin-right: 5px;
+	padding-bottom: 15px;
+	padding-top: 20px;
+	border-bottom-width: 4px;
+	border-bottom-style: ridge;
+	border-bottom-left-radius: 9px;
+	border-bottom-right-radius: 9px;
+}
+
+.sheet:hover {
+	border-bottom: none;
+	border-width: 2px;
+	border-style: outset;
+	border-top-left-radius: 9px;
+	border-top-right-radius: 9px;
+}
+
+.sheet img {
+	width: 150px;	
+	height: 150px;
+	margin-right: 10px;
+}
+
+.aboutcontentright {
 	margin-left: 20px;
+	margin-right: 10px;
 	width: 100%;
 	text-align: justify;	
 }
 
-.aboutcontent h3 {
-	margin-top: 0;
+.aboutcontentleft {
+	margin-right: 20px;	
+	padding-left: 10px;
+	width: 10em;
+	text-align: justify;	
+}
+
+h3 {
+	margin-top: 5px;
 }
