--- a/css/about.css
+++ b/css/about.css
@@ -80,10 +80,16 @@ h2 {
 .aboutcontentleft {
 	margin-right: 20px;	
 	padding-left: 10px;
-	width: 10em;
-	text-align: justify;	
+	width: 10em;	
+	line-height: 1.2em;
+}
+
+.aboutcontentleft p {
+	margin-bottom: 0;
+	margin-top: 0.5em;
 }
 
 h3 {
 	margin-top: 5px;
+	margin-bottom: 15px;
 }
