--- a/css/index.css
+++ b/css/index.css
@@ -2,14 +2,21 @@
 
 .news {	
 	height: 260px;
-	margin-top: 6px;	
+	margin-top: 6px;		
+	text-shadow: 
+      -1px 1px 5px grey, 
+      -2px 2px 5px lightgray; 
 }
 
 .news h2 {
 	margin-top: 0;
 	margin-bottom: 6px;
 	text-align: center;
-	font-size: 22px;
+	font-size: 22px;		
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 
 }
 
 .newsarticlebox {
