--- a/css/about.css
+++ b/css/about.css
@@ -15,10 +15,24 @@
 	padding-bottom: 10px;
 }
 
+h1 {
+	margin-top: 0;
+	margin-bottom: 10px;
+	padding-left: 50px;
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 
+}
+
 h2 {
 	margin-top: 0;
 	margin-bottom: 10px;
 	padding-left: 50px;
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 
 }
 
 .fulcrumsheet {
@@ -74,14 +88,20 @@ h2 {
 	margin-left: 20px;
 	margin-right: 10px;
 	width: 100%;
-	text-align: justify;	
+	text-align: justify;		
+	text-shadow:
+		-1px 1px 5px grey, 
+      	-2px 2px 5px lightgray;
 }
 
 .aboutcontentleft {
 	margin-right: 20px;	
 	padding-left: 10px;
 	width: 10em;	
-	line-height: 1.2em;
+	line-height: 1.2em;	
+	text-shadow:
+		-1px 1px 5px grey, 
+      	-2px 2px 5px lightgray;
 }
 
 .aboutcontentleft p {
@@ -91,5 +111,9 @@ h2 {
 
 h3 {
 	margin-top: 5px;
-	margin-bottom: 15px;
+	margin-bottom: 15px;	
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 
 }
