--- a/css/progetti.css
+++ b/css/progetti.css
@@ -1,5 +1,16 @@
 @charset "utf-8";
 
+h1 {
+	margin-top: 0.6em;
+	margin-bottom: 0.6em;
+	font-size: 26px;
+	padding-left: 74px;
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 
+}
+
 .progetti {
 	margin-top: 5px;
 	display: block;
@@ -33,8 +44,12 @@
 
 .progetti h2 {
 	font-size: 18px;
-	margin-top: 6px;
-	margin-bottom: 6px;
+	margin-top: 0px;
+	margin-bottom: 6px;	
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 
 }
 
 .testoprogetti {
@@ -44,41 +59,59 @@
 	font-size: 18px;
 	word-wrap: break-word;
 	border-radius: 8px;
-	height: 170px;
+	height: 130px;
 	margin-right: 4px;
-	margin-top: 4px;
-	text-align: justify;
+	margin-top: 6px;
+	text-align: justify;	
+	overflow:scroll;
 }
 
 .testoprogetti p {
-	margin-top: 0;
+	margin-top: 0;	
+	text-shadow:
+		-1px 1px 5px grey, 
+      	-2px 2px 5px lightgray;
 }
 
 @media (max-width: 1096px) {	
+	h1 {
+		font-size: 22px;
+		padding-left: 100px;
+	}
+	.progetti h2 {
+		font-size: 16px;
+	}
 	.testoprogetti{
 		font-size: 16px;
 	}
 }
 
 @media (max-width: 767px) {
-	.progetti article img {
-		width: 235px;
-		height: 150px;
+	h1 {
+		font-size: 19px;
+		padding-left: 123px;
 	}
-	.testoprogetti {
-		height: 150px;
+	.progetti h2 {
 		font-size: 14px;
-		overflow:scroll;
+	}
+	.testoprogetti {		
+		font-size: 14px;
 	}
 }
 
 @media (max-width: 320px) {	
+	h1 {
+		font-size 14px;
+	}
 	.progetti article img {
-		width: 105px;
-		height: 66px;
+		width: 110px;
+		height: 55px;
+	}
+	.progetti h2 {
+		font-size: 12px;
 	}
 	.testoprogetti {
-		height: 66px;
+		height: 60px;
 		font-size: 12px;
 	}	
 	.progetti article {
