--- a/css/projecttemplate.css
+++ b/css/projecttemplate.css
@@ -1,13 +1,15 @@
 .title {
 	width: 100%;
-	margin-top: 0px;
+	margin-top: 15px;
 	margin-bottom: 0px;
-	padding-bottom: 5px;
 	color: black;
-	padding-left: 15px;
-	padding-top: 10px;
+	padding-left: 15px;	
 	font-size: 26px;
 	text-align: center;	
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 	
 }
 
 .imgcontent {
@@ -33,10 +35,13 @@
 .content {
 	color: black;
 	font-size: 20px;
-	text-align: justify;
-	padding-left: 20px;	
-	padding-right: 20px;
-	margin-top: 0px;
+	padding-left: 10px;	
+	padding-right: 10px;
+	margin-top: 15px;
+	line-height: 1.45;
+	text-shadow: 
+      -1px 1px 3px darkgray, 
+      -2px 2px 3px lightgray; 
 }
 
 .sidebar{
@@ -112,7 +117,10 @@
 	font-size: 14px;
 	text-align: right;
 	padding-right: 7px;
-	font-weight: 150;
+	font-weight: 150;		
+	text-shadow: 
+      -1px 1px 2px darkgray, 
+      -2px 2px 2px gray; 
 }
 
 .news h4 {
@@ -120,11 +128,18 @@
 	margin-bottom: 0;
 	font-size: 20px;
 	width: 100%;
-	padding-left: 7px;
+	padding-left: 7px;		
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px darkgray, 
+      -2px 2px 1px gray; 	
 }
 
 .news p {
 	width: 100%;
 	padding-left: 7px;
-	font-weight: 500;
+	font-weight: 500;	
+	text-shadow: 
+      -1px 1px 5px darkgray, 
+      -2px 2px 5px gray; 
 }
