--- a/css/progetti.css
+++ b/css/progetti.css
@@ -1,14 +1,7 @@
 @charset "utf-8";
 
-h1 {
-	margin-top: 0.6em;
-	margin-bottom: 0.6em;
-	font-size: 26px;
+h1 {	
 	padding-left: 74px;
-	text-shadow: 
-      0px -1px 0 darkgray, 
-      -1px 1px 1px grey, 
-      -2px 2px 1px lightgray; 
 }
 
 .progetti {
@@ -28,8 +21,8 @@ h1 {
 	position: relative;
 	border: 4px double #B5B5B5;
 	border-radius: 8px;
-	margin-left: 4px;
-	margin-top: 4px;
+	margin-left: 4px;	
+	margin-top: 7px;
 	vertical-align: middle;	
 	-webkit-filter: contrast(75%) grayscale(50%);
     filter: contrast(75%) grayscale(50%);	
@@ -63,7 +56,10 @@ h1 {
 	margin-right: 4px;
 	margin-top: 6px;
 	text-align: justify;	
-	overflow:scroll;
+}
+
+article {
+	margin-bottom: 30px;
 }
 
 .testoprogetti p {
@@ -75,24 +71,16 @@ h1 {
 
 @media (max-width: 1096px) {	
 	h1 {
-		font-size: 22px;
 		padding-left: 100px;
-	}
-	.progetti h2 {
-		font-size: 16px;
-	}
-	.testoprogetti{
-		font-size: 16px;
+	}		
+	.testoprogetti{	
+		overflow:scroll;
 	}
 }
 
 @media (max-width: 767px) {
 	h1 {
-		font-size: 19px;
 		padding-left: 123px;
-	}
-	.progetti h2 {
-		font-size: 14px;
 	}
 	.testoprogetti {		
 		font-size: 14px;
@@ -100,19 +88,12 @@ h1 {
 }
 
 @media (max-width: 320px) {	
-	h1 {
-		font-size 14px;
-	}
 	.progetti article img {
 		width: 110px;
 		height: 55px;
 	}
-	.progetti h2 {
-		font-size: 12px;
-	}
 	.testoprogetti {
 		height: 60px;
-		font-size: 12px;
 	}	
 	.progetti article {
 		height: 80px;
