--- a/css/servizi.css
+++ b/css/servizi.css
@@ -3,3 +3,23 @@
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
+h1 {
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 	
+}
+
+h2 {
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 	
+}
+
+p {
+	text-shadow: 
+      -1px 1px 3px darkgray, 
+      -2px 2px 3px lightgray; 
+}
