--- a/css/template.css
+++ b/css/template.css
@@ -9,6 +9,20 @@ body {
 	margin-left: 0px;
 }
 
+h1 {
+	margin-top: 0.6em;
+	margin-bottom: 0.6em;
+	font-size: 26px;
+	text-shadow: 
+      0px -1px 0 darkgray, 
+      -1px 1px 1px grey, 
+      -2px 2px 1px lightgray; 
+}
+
+h2 {
+	font-size: 18px;
+}
+
 /* Container */
 .container {
 	width: 1100px;
@@ -54,18 +68,45 @@ body {
 }
 
 @media (max-width: 1096px) {	
+	h1 {
+		font-size: 22px;
+	}	
+	h2 {
+		font-size: 16px;
+	}
+	p {
+		font-size: 16px;
+	}
 	.container {
 		width: 770px;
 	}
 }
 
 @media (max-width: 767px) {
+	h1 {
+		font-size: 19px;
+	}
+	h2 {
+		font-size: 14px;
+	}
+	p {
+		font-size: 14px;
+	}	
 	.container {
 		width: 100%;
 	}
 }
 
-@media (max-width: 320px) {	
+@media (max-width: 320px) {		
+	h1 {
+		font-size: 14px;
+	}	
+	h2 {
+		font-size: 12px;
+	}
+	p {
+		font-size: 12px;
+	}	
 	.footericon {
 		padding-left: 5px;
 		padding-right: 5px;
