--- a/css/projecttemplate.css
+++ b/css/projecttemplate.css
@@ -93,6 +93,7 @@
 }
 
 .news {
+	width: 280px;
 	color: #000000;
 	display: flex;
 	flex-wrap: wrap;
@@ -103,11 +104,11 @@
 
 .news div {
 	width: 100%;
-	margin-bot: 0;
-	margin-top: 0;
+	margin-bot: 2px;
+	margin-top: 2px;
 	padding-bottom: 0;
-	display: flex;	
-	justify-content: center;	
+	display: flex;
+	justify-content: center;
 }
 
 .news img {
@@ -142,8 +143,8 @@
 }
 
 .news h4 {
-	margin-top: 0;
-	margin-bottom: 0;
+	margin-top: 2px;
+	margin-bottom: 2px;
 	font-size: 18px;
 	width: 100%;
 	padding-left: 7px;		
@@ -156,11 +157,22 @@
 .news p {
 	width: 100%;
 	padding-left: 7px;
+	padding-right: 7px;
 	font-size: 14px;
 	text-shadow: 
       -1px 1px 5px darkgray, 
       -2px 2px 5px gray; 
 	opacity: 0.78;
+	
+	text-align: justify;
+}
+
+.divider {
+	margin-left: 7px;
+	margin-right: 7px;
+	padding-top: 1em;
+	margin-bottom: 4px;
+	border-bottom: 1px solid rgba(49,49,49,1.00);
 }
 
 .links {	
