--- a/css/projecttemplate.css
+++ b/css/projecttemplate.css
@@ -61,17 +61,17 @@
 }
 
 .sidebar{
-	height: 100%;
+	min-width: 300px;
 	margin-top: 0px;
 	top: 0;
 	right: 0;
-	background-color: rgba(172,161,161,1.00)
+	background-color:rgba(179,179,179,0.30);	
 } 
 
 .flag {
 	background-color: #454343;
-	padding-top: 12px;
-	padding-bottom: 12px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	padding-left: 20px;
 	padding-right: 20px;
 	word-spacing: 12px;
@@ -93,12 +93,16 @@
 }
 
 .news {
-	width: 280px;
+	width: 300px;	
+	max-height: 1000px;	
+	background-color: rgba(166,161,161,1.00);
 	color: #000000;
 	display: flex;
 	flex-wrap: wrap;
 	margin-left: auto;
 	margin-right: auto;
+	padding-bottom: 10px;
+	overflow-y: scroll;
 	justify-content: center;
 }
 
@@ -136,7 +140,7 @@
 	font-size: 12px;
 	text-align: right;
 	padding-right: 7px;
-	font-weight: 150;		
+	font-weight: 700;		
 	text-shadow: 
       -1px 1px 2px darkgray, 
       -2px 2px 2px gray; 
