--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 
 .container {
-	background-color: black;
 	padding-top: 15px;	
 }
 
@@ -9,8 +8,10 @@
 	margin-left: auto;
 	margin-right: auto;
 	width: 80%;
-	color: white;
 	padding-bottom: 20px;
+	text-shadow:
+		0px -1px 0 darkgray, 
+      -2px 2px 1px lightgray;
 }
 
 #table {
@@ -30,8 +31,12 @@ td {
 	padding-top: 5px;
 	padding-bottom: 5px;
 	padding-left: 12px;
-	padding-right: 12px;
-	
+	padding-right: 12px;	
+	background-color: #2E2E2E;
+	color: white;
+	font-weight: 700;
+	text-shadow: 
+		0px -1px 0 grey; 
 }
 
 .leftcell {
@@ -43,6 +48,7 @@ td {
 }
 
 #table .comments {
-	width: 100%;
+	width: 400px;
+	max-width: 600px;
 	height: 100px;
 }
