--- a/css/navbar.css
+++ b/css/navbar.css
@@ -26,7 +26,7 @@
 }
 
 .upperlogo {
-	width: 350px;
+	width: 300px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -144,8 +144,7 @@
 	}
 		
 	.smalllogo {
-		width: 250px;
-		height: 35px;
+		width: 100%;
 		position: relative;
 		top: 0;
 		left: 0;
